--- a/index.html
+++ b/index.html
@@ -56,13 +56,13 @@
 
       <div class="box-container">
         <div class="box"><h3><a href="travel_to_us.html">سفر به آمریکا</a></h3></div>
-        <div class="box"><h3><a href="link1.html">اولین روزهای ورود</a></h3></div>
-        <div class="box"><h3><a href="link1.html">شهر منهتن</a></h3></div>
-        <div class="box"><h3><a href="link1.html">مسکن</a></h3></div>
-        <div class="box"><h3><a href="link1.html">بیمه</a></h3></div>
-        <div class="box"><h3><a href="link1.html">رک‌سنتر</a></h3></div>
-        <div class="box"><h3><a href="link1.html">HIS</a></h3></div>
-        <div class="box"><h3><a href="link1.html">خرید</a></h3></div>
+        <div class="box"><h3><a href="#">اولین روزهای ورود</a></h3></div>
+        <div class="box"><h3><a href="#">شهر منهتن</a></h3></div>
+        <div class="box"><h3><a href="#">مسکن</a></h3></div>
+        <div class="box"><h3><a href="#">بیمه</a></h3></div>
+        <div class="box"><h3><a href="#">رک‌سنتر</a></h3></div>
+        <div class="box"><h3><a href="#">HIS</a></h3></div>
+        <div class="box"><h3><a href="#">خرید</a></h3></div>
       </div>
 
       <br>
