--- a/index.html
+++ b/index.html
@@ -73,14 +73,14 @@
       </p>
 
       <div class="box-container">
-        <div class="box"><h3><a href="link1.html">مالیات</a></h3></div>
-        <div class="box"><h3><a href="link1.html">گواهی نامه</a></h3></div>
-        <div class="box"><h3><a href="link1.html">خرید ماشین</a></h3></div>
-        <div class="box"><h3><a href="link1.html">خدمات درمانی</a></h3></div>
-        <div class="box"><h3><a href="link1.html">کردیت کارت</a></h3></div>
-        <div class="box"><h3><a href="link1.html">......</a></h3></div>
-        <div class="box"><h3><a href="link1.html">همراهان دانشجو</a></h3></div>
-        <div class="box"><h3><a href="link1.html">نکات متفرقه</a></h3></div>
+        <div class="box"><h3><a href="#">مالیات</a></h3></div>
+        <div class="box"><h3><a href="#">گواهی نامه</a></h3></div>
+        <div class="box"><h3><a href="#">خرید ماشین</a></h3></div>
+        <div class="box"><h3><a href="#">خدمات درمانی</a></h3></div>
+        <div class="box"><h3><a href="#">کردیت کارت</a></h3></div>
+        <div class="box"><h3><a href="#">......</a></h3></div>
+        <div class="box"><h3><a href="#">همراهان دانشجو</a></h3></div>
+        <div class="box"><h3><a href="#">نکات متفرقه</a></h3></div>
       </div>
 
     </section>
