--- a/contact_us.html
+++ b/contact_us.html
@@ -36,16 +36,17 @@
     <!-- Navbar end -->
 
     <!-- About Section start -->
-    <section id="tozihat" class="tozihat">
-      <h2>سفر به آمریکا</h2>
-      <p>توضیحات مربوط به</p>
-      <p>خرید بلیط، مقایسه ایرلاین‌ها</p>
-      <p>چمدون، چی‌بیاریم چی نیاریم</p>
-      <p>مدارک ضروری</p>
-      <p>توصیه‌های مربوط به پرواز</p>
+    <section id="about" class="about">
+      <h2>صفحه ارتباط با ما</h2>
+      <p>0</p>
+      <p>0</p>
+      <p>0</p>
+      <p>0</p>
+      <p>0</p>
       <p></p>
       <p></p>
-
+      <p></p>
+      <p></p>
     </section>
     <!-- About Section end -->
 
