--- a/events.html
+++ b/events.html
@@ -20,13 +20,13 @@
 
     <!-- Navbar start -->
     <nav class="navbar">
-      <a href="#" class="navbar-logo">انجمن ایرانیان دانشگاه ایالتی کانزاس</a>
+      <a href="index.html" class="navbar-logo">انجمن ایرانیان دانشگاه ایالتی کانزاس</a>
       <div class="navbar-nav">
         <a href="index.html">خانه</a>
         <a href="events.html">برنامه‌ها</a>
         <a href="pictures.html">عکس‌ها</a>
-        <a href="#">انجمن</a>
-        <a href="#">تماس با ما</a>
+        <a href="team.html">انجمن</a>
+        <a href="contact_us.html">تماس با ما</a>
       </div>
 
       <div class="navbar-extra">
