--- a/first_days.html
+++ b/first_days.html
@@ -37,12 +37,14 @@
 
     <!-- About Section start -->
     <section id="tozihat" class="tozihat">
-      <h2>سفر به آمریکا</h2>
+      <h2>اولین روزهای ورود</h2>
       <p>توضیحات مربوط به</p>
-      <p>خرید بلیط، مقایسه ایرلاین‌ها</p>
-      <p>چمدون، چی‌بیاریم چی نیاریم</p>
-      <p>مدارک ضروری</p>
-      <p>توصیه‌های مربوط به پرواز</p>
+      <p>باز کردن حساب بانکی</p>
+      <p>دریافت کارت دانشجویی</p>
+      <p>تحویل مدارک به Grad School</p>
+      <p>دریافت فرم اولیه از دپارتمان</p>
+      <p>دریافت سیمکارت از ISSS</p>
+      <p>شروع پروسه SSN</p>
       <p></p>
       <p></p>
 
