--- a/housing.html
+++ b/housing.html
@@ -37,12 +37,12 @@
 
     <!-- About Section start -->
     <section id="tozihat" class="tozihat">
-      <h2>سفر به آمریکا</h2>
-      <p>توضیحات مربوط به</p>
-      <p>خرید بلیط، مقایسه ایرلاین‌ها</p>
-      <p>چمدون، چی‌بیاریم چی نیاریم</p>
-      <p>مدارک ضروری</p>
-      <p>توصیه‌های مربوط به پرواز</p>
+      <h2>Housing</h2>
+      <p>معرفی  خونه‌های آن‌کمپس</p>
+      <p>مقایسه خونه‌های جارداین</p>
+      <p>پی‌دی‌اف هزینه‌های جارداین</p>
+      <p>توضیحات برای جارداین</p>
+      <p>معرفی آپشن‌های آف‌کمپس</p>
       <p></p>
       <p></p>
 
