--- a/index.html
+++ b/index.html
@@ -20,13 +20,13 @@
 
     <!-- Navbar start -->
     <nav class="navbar">
-      <a href="#" class="navbar-logo">انجمن ایرانیان دانشگاه ایالتی کانزاس</a>
+      <a href="index.html" class="navbar-logo">انجمن ایرانیان دانشگاه ایالتی کانزاس</a>
       <div class="navbar-nav">
         <a href="index.html">خانه</a>
         <a href="events.html">برنامه‌ها</a>
         <a href="pictures.html">عکس‌ها</a>
-        <a href="#">انجمن</a>
-        <a href="#">تماس با ما</a>
+        <a href="team.html">انجمن</a>
+        <a href="contact_us.html">تماس با ما</a>
       </div>
 
       <div class="navbar-extra">
@@ -56,9 +56,9 @@
 
       <div class="box-container">
         <div class="box"><h3><a href="travel_to_us.html">سفر به آمریکا</a></h3></div>
-        <div class="box"><h3><a href="#">اولین روزهای ورود</a></h3></div>
-        <div class="box"><h3><a href="#">شهر منهتن</a></h3></div>
-        <div class="box"><h3><a href="#">مسکن</a></h3></div>
+        <div class="box"><h3><a href="first_days.html">اولین روزهای ورود</a></h3></div>
+        <div class="box"><h3><a href="manhattan.html">شهر منهتن</a></h3></div>
+        <div class="box"><h3><a href="housing.html">مسکن</a></h3></div>
         <div class="box"><h3><a href="#">بیمه</a></h3></div>
         <div class="box"><h3><a href="#">رک‌سنتر</a></h3></div>
         <div class="box"><h3><a href="#">HIS</a></h3></div>
