--- a/manhattan.html
+++ b/manhattan.html
@@ -37,12 +37,12 @@
 
     <!-- About Section start -->
     <section id="tozihat" class="tozihat">
-      <h2>سفر به آمریکا</h2>
-      <p>توضیحات مربوط به</p>
-      <p>خرید بلیط، مقایسه ایرلاین‌ها</p>
-      <p>چمدون، چی‌بیاریم چی نیاریم</p>
-      <p>مدارک ضروری</p>
-      <p>توصیه‌های مربوط به پرواز</p>
+      <h2>همه‌چی در مورد منهتن کوچولومون</h2>
+      <p>تاریخچه</p>
+      <p>مردم</p>
+      <p>جاهای دیدنی</p>
+      <p>جاهای اووید کردنی</p>
+      <p>معرفی رستوران</p>
       <p></p>
       <p></p>
 
