--- a/index.html
+++ b/index.html
@@ -21,16 +21,15 @@
     <!-- Navbar start -->
     <nav class="navbar">
       <a href="index.html" class="navbar-logo">انجمن ایرانیان دانشگاه ایالتی کانزاس</a>
+      <div id="hamburger-menu" class="hamburger-menu">
+        &#9776; <!-- Hamburger icon (three horizontal lines) -->
+      </div>
       <div class="navbar-nav">
         <a href="index.html">خانه</a>
         <a href="events.html">برنامه‌ها</a>
         <a href="pictures.html">عکس‌ها</a>
         <a href="team.html">انجمن</a>
         <a href="contact_us.html">تماس با ما</a>
-      </div>
-
-      <div class="navbar-extra">
-        <a href="#" id="hamburger-menu"><i data-feather="menu"></i></a>
       </div>
     </nav>
     <!-- Navbar end -->
