--- a/travel_to_us.html
+++ b/travel_to_us.html
@@ -21,6 +21,9 @@
     <!-- Navbar start -->
     <nav class="navbar">
       <a href="index.html" class="navbar-logo">انجمن ایرانیان دانشگاه ایالتی کانزاس</a>
+      <div id="hamburger-menu" class="hamburger-menu">
+        &#9776; <!-- Hamburger icon (three horizontal lines) -->
+      </div>
       <div class="navbar-nav">
         <a href="index.html">خانه</a>
         <a href="events.html">برنامه‌ها</a>
